forge/tests/errors/immutable_assign.fg
// Error test: assigning to immutable variable
fn main() {
  let x = 42
  println(string(x))
  x = 100
}
